Project name corrected

--- a/OzgurIndıv/.project
+++ b/OzgurIndıv/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OzgurIndiv</name>
+	<name>Ozgur_Individual</name>
 	<comment></comment>
 	<projects>
 	</projects>
