--- a/group11/src/servlet/Ozgur_Individual/.project
+++ b/group11/src/servlet/Ozgur_Individual/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ozgur_Indiv</name>
+	<name>Ozgur_Indivi</name>
 	<comment></comment>
 	<projects>
 	</projects>
