--- a/coco-android/Coco/app/src/main/AndroidManifest.xml
+++ b/coco-android/Coco/app/src/main/AndroidManifest.xml
@@ -8,17 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateTopicActivity"
+        <activity
+            android:name=".CreateTopicActivity"
             android:label="Create Topic">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".TopicDetailActivity"
-            android:label="Trump" >
+            android:label="Trump">
+
+        </activity>
+        <activity android:name=".GlobalViewActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
