--- a/coco-android/Coco/app/src/main/AndroidManifest.xml
+++ b/coco-android/Coco/app/src/main/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cocomap.coco">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".base.BaseApplication"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CreateTopicActivity"
+            android:name=".activity.CreateTopicActivity"
             android:label="Create Topic">
         </activity>
         <activity
-            android:name=".TopicDetailActivity"
+            android:name=".activity.TopicDetailActivity"
             android:label="Trump">
 
         </activity>
-        <activity android:name=".GlobalViewActivity"
+        <activity android:name=".activity.GlobalViewActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".activity.SignUpActivity"
             android:label="Sign Up">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LogInActivity"
+            android:name=".activity.LogInActivity"
             android:label="Login">
 
         </activity>
