--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-dj-database-url==0.4.0
-Django==1.9.2
-gunicorn==19.4.5
-psycopg2==2.6.1
-whitenoise==2.0.6
+
+defusedxml==0.4.1
+Django==1.10.2
+django-allauth==0.28.0
 djangorestframework==3.5.3
+djangorestframework-bulk==0.2.1
+oauthlib==2.0.0
+pkg-resources==0.0.0
+psycopg2==2.6.2
+python3-openid==3.0.10
+requests==2.12.1
+requests-oauthlib==0.7.0
